yaml/slides_stg/slides_deployment_stg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    field.cattle.io/description: RevealJS SLides
  labels:
    app.kubernetes.io/instance: slides
    app.kubernetes.io/name: ansible-slides
  name: ansible-slides
  namespace: pitc-ansible-training-stg
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: slides
      app.kubernetes.io/name: ansible-slides
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/instance: slides
        app.kubernetes.io/name: ansible-slides
    spec:
      affinity: {}
      containers:
      - image: quay.io/puzzle/ansible-training-slides:stg
        imagePullPolicy: Always
        name: slides
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 20m
            memory: 56Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
