yaml/slides_stg/slides_service_stg.yaml
apiVersion: v1
kind: Service
metadata:
  name: ansible-slides
  namespace: pitc-ansible-training-stg
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/instance: slides
    app.kubernetes.io/name: ansible-slides
  sessionAffinity: None
  type: ClusterIP
