yaml/slides_stg/slides_ingress_stg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: slides
    app.kubernetes.io/name: ansible-slides
    public: "true"
  name: ansible-slides
  namespace: pitc-ansible-training-stg
spec:
  rules:
  - host: ansible-slides-stg.puzzle.ch
    http:
      paths:
      - backend:
          service:
            name: ansible-slides
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
  tls:
    - {}
